Abort migration earlier when receiver is not cleaning overlapping ranges

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v5.0, v4.4
    • Sharding EMEA 2021-06-14, Sharding EMEA 2021-06-28
    • 50
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently, the migration source manager is waiting up to 6 hours for a receiver to finish cleaning overlapping range deletion tasks before starting a move chunk.

      This can result in migrations being blocked on both sides for an unreasonable amount of time: a much smaller timeout must be used for this specific case, aborting the migration in case the range doesn't get cleared.

            Assignee:
            Marcos José Grillo Ramirez
            Reporter:
            Pierlauro Sciarelli
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: