SERVER-55429 Add timeout to migrations when waiting for range deletions

... on intersecting ranges